[project]
name = "robotpuzzle"
version = "0.1.0"
description = "Solve Exploding Robot Puzzle"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich>=13.9.4",
    "textual>=0.86.3",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "ruff>=0.7.4",
    "ruff-lsp>=0.0.58",
    "pdoc>=15.0.0",
    "flake8>=7.1.1",
    "flake8-pytest-style>=2.0.0",
    "bump-my-version>=0.28.1",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
