[project]
name = "robotpuzzle"
version = "1.1.0"
description = "Solve Exploding Robot Puzzle"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich>=13.9.4",
    "textual>=0.86.3",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "ruff>=0.7.4",
    "ruff-lsp>=0.0.58",
    "pdoc>=15.0.0",
    "flake8>=7.1.1",
    "flake8-pytest-style>=2.0.0",
    "bump-my-version>=0.28.1",
    "pytest>=8.3.3",
    "pylint>=3.3.1",
    "bpython>=0.24",
]

[project.scripts]
puzzle = "robots:main"


[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

# [tool.setuptools.packages]
# find = {}  # Scan the project directory with the default parameters

[tool.pytest.ini_options]
testpaths = [ "tests", "intergration" ]
addopts = "-ra --showlocals -v --import-mode=importlib"
log_cli = true
log_cli_level = "DEBUG"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
minversion = "6.0"
filterwarnings = "ignore"
cache_dir = ".pytest_cache"
norecursedirs = ["docs", "build", "scratch" ]

[tool.black]
exclude = '''/
    # Default values for Black.
    \.eggs|\.git|\.hg|\.mypy_cache|\.nox|\.tox|\.venv|\.svn|_build|buck-out|build|dist
/'''

